Corrections of code according to pull request comments.